finished with unit test lab

--- a/FanPage/appsettings.json
+++ b/FanPage/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Data": {
+    "FanPage": {
+      "ConnectionString": "",
+      "SanConnectionString": "Data Source=SQL5047.site4now.net;Initial Catalog=DB_A4F6F2_FanPageDB;User Id=DB_A4F6F2_FanPageDB_admin;Password=YOUR_DB_PASSWORD;"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
