--- a/FanPage/appsettings.Production.json
+++ b/FanPage/appsettings.Production.json
@@ -6,10 +6,8 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Warning"
     }
-    
-  }
+  },
+  "AllowedHosts": "*"
 }
