--- a/FanPage/appsettings.Development.json
+++ b/FanPage/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "Data": {
     "FanPage": {
-      "ConnectionString": "Data Source=SQL5047.site4now.net;Initial Catalog=DB_A4F6F2_FanPageDB;User Id=DB_A4F6F2_FanPageDB_admin;Password=YOUR_DB_PASSWORD;"
+      "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=FanPage;Trusted_Connection=True;MultipleActiveResultSets=true;"
     }
   },
   "Logging": {
@@ -10,6 +10,6 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-    
+
   }
 }
