--- a/FanPage/appsettings.json
+++ b/FanPage/appsettings.json
@@ -1,9 +1,8 @@
 {
-  "Data": {
-    "FanPage": {
-      "ConnectionString": "",
-      "SanConnectionString": "Data Source=SQL5047.site4now.net;Initial Catalog=DB_A4F6F2_FanPageDB;User Id=DB_A4F6F2_FanPageDB_admin;Password=YOUR_DB_PASSWORD;"
-    }
+  "ConnectionStrings": {
+
+    "SanConnectionString": "Data Source=SQL5047.site4now.net;Initial Catalog=DB_A4F6F2_FanPageDB;User Id=DB_A4F6F2_FanPageDB_admin;Password=YOUR_DB_PASSWORD;",
+    "LocalDbConnection": "Server=(localdb)\\MSSQLLocalDB;Database=FanPage;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
   "Logging": {
     "LogLevel": {
